--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -127,22 +127,12 @@ steps:
     podman network rm selenium-grid
   displayName: 'Cleanup Selenium Containers and Network'
 
-# 6️⃣ Debug - Verify HTML report exists
-- powershell: |
-    Write-Host "🔍 Locating HTML report..."
-    $report = Get-ChildItem -Recurse $(System.DefaultWorkingDirectory) | Where-Object { $_.Name -eq "index.html" }
-    if ($report) {
-        Write-Host "Found report at: $($report.FullName)"
-    } else {
-        Write-Host "No report found!"
-    }
-  displayName: 'Debug - Locate HTML Report'
 
 # 7️⃣ Publish HTML Report as Artifact
 - task: PublishPipelineArtifact@1
   displayName: 'Publish HTML Report Artifact'
   inputs:
-    targetPath: '$(System.DefaultWorkingDirectory)/**/reports'
+    targetPath: '$(System.DefaultWorkingDirectory)/target/reports'
     artifact: 'HTML_Test_Report'
     publishLocation: 'pipeline'
   condition: always()
@@ -151,7 +141,7 @@ steps:
 - task: PublishHtmlReport@1
   displayName: 'Publish HTML Report to Azure DevOps UI'
   inputs:
-    reportDir: '$(System.DefaultWorkingDirectory)/SeleniumFrameworkDesign/target/reports' # Adjust if debug shows different path
+    reportDir: '$(System.DefaultWorkingDirectory)/target/reports'
     reportTitle: 'Selenium Automation HTML Report'
     reportName: 'Automation_HTML_Report'
   condition: always()
