--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -127,6 +127,18 @@ steps:
     podman network rm selenium-grid
   displayName: 'Cleanup Selenium Containers and Network'
 
+# 6️⃣ Verify HTML report exists
+- powershell: |
+    $reportPath = "$(System.DefaultWorkingDirectory)/target/reports/index.html"
+    if (Test-Path $reportPath) {
+        Write-Host "✅ HTML report exists at $reportPath"
+    } else {
+        Write-Host "❌ HTML report not found!"
+        exit 1
+    }
+  displayName: 'Verify HTML Report Exists'
+  condition: always()
+
 
 # 7️⃣ Publish HTML Report as Artifact
 - task: PublishPipelineArtifact@1
