--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -148,6 +148,14 @@ steps:
     publishLocation: 'pipeline'
   condition: always()
 
+- task: PublishHtmlReport@1
+  displayName: 'Publish Extent Report Inline in Azure DevOps'
+  inputs:
+    reportDir: '$(System.DefaultWorkingDirectory)/target/reports'  # folder with HTML report
+    reportTitle: 'Extent Test Report'
+    reportName: 'ExtentReport'
+  condition: always()
+
 
 
 
