--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -148,6 +148,9 @@ steps:
     publishLocation: 'pipeline'
   condition: always()
 
+- script: dir $(System.DefaultWorkingDirectory)/target/reports
+  displayName: 'List Report Files'
+
 - task: PublishHtmlReport@1
   displayName: 'Publish Extent Report Inline in Azure DevOps'
   inputs:
