Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -150,6 +150,7 @@ steps:
 
 
 - task: publishhtmlreport@1
+  displayName: 'Create HTML'
   inputs:
     htmlType: 'genericHTML'
     htmlPath: '$(System.DefaultWorkingDirectory)/target/report/index.html'
