--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,7 +49,6 @@ steps:
     Write-Host "Network selenium-grid created."
   displayName: 'Recreate Selenium Grid Network'
 
-
 # 2️⃣ Run Selenium Hub container
 - powershell: |
     Write-Host "Starting Selenium Hub container..."
@@ -93,27 +92,22 @@ steps:
     }
   displayName: 'Wait for Selenium Grid'
 
-# 5️⃣ Run Maven Tests
-- task: Maven@3
-  displayName: 'Run Automation Tests with Maven'
-  inputs:
-    mavenPomFile: 'pom.xml'
-    mavenOptions: '-Xmx3072m'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.11'
-    jdkArchitectureOption: 'x64'
-    publishJUnitResults: true
-    testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'test'
-    options: >
-      -DargLine="-ea"
-      "-Dtest=junit.OrdersTests#submitOrderTest"
-      "-DBROWSER=chrome"
-      "-DRUN_ENVIRONMENT=LOCAL"
-      "-DRUN_CONFIGURATION=podman-grid"
-      "-DGRID_CONTAINER_NAME=selenium-grid"
-      "-DCHROME_IMAGE=selenium/node-chrome:latest"
-      "-DSELENIUM_GRID_URL=http://localhost:4444/wd/hub"
+# 5️⃣ Create Maven Container with JDK 11 using Podman and run tests inside the container
+- powershell: |
+    Write-Host "Creating Maven container with JDK 11..."
+    podman run --rm -d --name maven-jdk11-container --network selenium-grid `
+        -v $(System.DefaultWorkingDirectory):/mnt/workspace `
+        -w /mnt/workspace `
+        maven:3.8-openjdk-11-slim `
+        mvn test -DargLine="-ea" `
+        "-Dtest=junit.OrdersTests#submitOrderTest" `
+        "-DBROWSER=chrome" `
+        "-DRUN_ENVIRONMENT=LOCAL" `
+        "-DRUN_CONFIGURATION=podman-grid" `
+        "-DGRID_CONTAINER_NAME=selenium-grid" `
+        "-DCHROME_IMAGE=selenium/node-chrome:latest" `
+        "-DSELENIUM_GRID_URL=http://localhost:4444/wd/hub"
+  displayName: 'Run Tests in Maven Container'
 
 # 6️⃣ Cleanup: stop and remove containers and network
 - powershell: |
@@ -128,7 +122,7 @@ steps:
   displayName: 'Cleanup Selenium Containers and Network'
   condition: always()
 
-# 6️⃣ Publish JUnit Test Results
+# 7️⃣ Publish JUnit Test Results
 - task: PublishTestResults@2
   displayName: 'Publish JUnit Test Results'
   inputs:
@@ -139,7 +133,7 @@ steps:
   condition: always()
 
 
-# 6️⃣ Publish HTML Report as a downloadable artifact
+# 8️⃣ Publish HTML Report as a downloadable artifact
 - task: PublishBuildArtifacts@1
   displayName: 'Publish HTML Test Report Artifact'
   inputs:
@@ -147,18 +141,3 @@ steps:
     ArtifactName: 'reports'
     publishLocation: 'Container'
   condition: always()
-
- #- task: publishhtmlreport@1
- # displayName: 'Publish HTML Report'
- # inputs:
- #   htmlType: 'genericHTML'
- #   htmlPath: '$(System.DefaultWorkingDirectory)/target/reports/index.html'
- #   reportFolder: '$(System.DefaultWorkingDirectory)/target/reports'
- # condition: always()
-
-
-
-
-
-
-
